debug: debugging print outs

--- a/generate_schedule/Cargo.toml
+++ b/generate_schedule/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 clock-zones = "0.4.1"
+colored = "3.0.0"
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
