--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
     rev: v0.24.2
     hooks:
       - id: toml-sort-fix
+        exclude: Cargo.lock
   - repo: https://github.com/asottile/add-trailing-comma
     rev: v3.1.0
     hooks:
