--- a/generate_schedule_milp/Cargo.toml
+++ b/generate_schedule_milp/Cargo.toml
@@ -1,7 +1,8 @@
 [dependencies]
-clarabel = "0.10.0"
 clock-zones = "0.4.1"
 colored = "3.0.0"
+good_lp = { version = "1.12.0", features = ["microlp"] }
+microlp = "0.2.11"
 regex = "1.5"
 serde = {version = "1.0", features = ["derive"]}
 
