--- a/scheduler_core/Cargo.toml
+++ b/scheduler_core/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 [dependencies]
 good_lp = { version = "1.12.0", features = ["microlp"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
+
+[lib]
+name = "scheduler_core"
+path = "src/lib.rs"
+
+[[bin]]
+name = "scheduler_core"
+path = "src/main.rs"
