--- a/scheduler_wasm/Cargo.toml
+++ b/scheduler_wasm/Cargo.toml
@@ -2,9 +2,10 @@
 wasm-bindgen = "0.2"
 scheduler_core = { path = "../scheduler_core" }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.140"
 
 [package]
-name = "generate_schedule_milp_wasm"
+name = "scheduler_wasm"
 version = "0.1.0"
 edition = "2021"
 
